--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = test.settings
+DJANGO_SETTINGS_MODULE = project.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = 
     --doctest-modules
