criando variáveis para controlar a paginação

--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,6 @@ SECRET_KEY = 'ENTER YOUR SECRET KEY HERE!'
 # True => 1
 # False => 0
 DEBUG = 1
+# PAGINATOR SETTINGS
+OBJECTS_PER_PAGE = 15
+PAGES_TO_DISPLAY = 4
