chore: atualizando .env

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,17 @@
 # DJANGO SETTINGS
 SECRET_KEY = 'ENTER YOUR SECRET KEY HERE!'
-# DEBUG OPTION
 # True => 1
 # False => 0
 DEBUG = 1
+
 # PAGINATOR SETTINGS
 OBJECTS_PER_PAGE = 4
 PAGES_TO_DISPLAY = 4
+
+# DATABASE SETTINGS
+DATABASE_ENGINE = 'django.db.backends.sqlite3'
+DATABASE_NAME = './db.sqlite3'
+DATABASE_USER = ''
+DATABASE_PASSWORD = ''
+DATABASE_HOST = ''
+DATABASE_PORT = ''
